--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="hero-text">
+        <h1 style = "font-size:50px;">Sign In</h1> 
+        <h2> Email(phone or mobile accounts) </h2>
+    </div>
 </body>
 </html>
