--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="hero-text">
-        <h1 style = "font-size:50px;">Sign In</h1> 
-        <h2> Email(phone or mobile accounts) </h2>
+
+    <div class = "container-1">
+        <h3> Sign In </h3>
+        <p> Email(phone or mobile accounts) </p>
+        <div class = "box-1"></div>
+            <div class = enter-email-box>Enter Email</div>
+            <p> Password </p>
+            <div class = "box-3">
+                <div class = enter-password-box> Enter Password</div>
+                <br>
+                <div class = continue > Continue </div>
+    
     </div>
 </body>
 </html>
