--- a/index.html
+++ b/index.html
@@ -8,18 +8,29 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class = "placeholder"> <a href = "https://placeholder.com"> <img src="https://via.placeholder.com/100X50"> </a> </div> 
 
     <div class = "container-1">
         <h3> Sign In </h3>
         <p> Email(phone or mobile accounts) </p>
-        <div class = "box-1"></div>
-            <div class = enter-email-box>Enter Email</div>
-            <p> Password </p>
-            <div class = "box-3">
-                <div class = enter-password-box> Enter Password</div>
+        <div class = enter-email-box>
+        <label for="Email"></label>
+        <input type = "text" id = "email" placeholder = "Enter Email" >
+        </div>
+            <p> Password 
+            <a href= "/" >Forgot Password </a> </p>
+            <br>
+                <div class = password>
+                <label for="Password"></label>
+                <input type = "text" id="password" placeholder="Password"> </div>
                 <br>
-                <div class = continue > Continue </div>
-    
+                <div class = "button" >
+                     <button type = "submit"> Continue </button> </div>
+                     <br>
+                        <a href= "/" > Need Help? </a> </div>
+    </div>
+    <div class = "create-account" >
+        <button type = "submit"> Create Your Amazon Account </button> </div>
     </div>
 </body>
 </html>
