--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
     <div class = "create-account" >
         <button type = "submit"> Create Your Amazon Account </button> </div>
     </div>
+    <footer>
+    <nav>
+        <ul>
+            <li><a href = "/" >Conditions of Use</a> </li>
+            <li><a href = "/" >Private Policy</a></a></li>
+            <li><a href="/" >Help</a> </li>
+        </ul>
+        <div class = "copyright">
+            &copy 1996-2020, Amazon.com, inc or its affiliates; &NonBreakingSpace;
+        </div>
+
+
+    </footer>
 </body>
 </html>
