--- a/index.html
+++ b/index.html
@@ -11,23 +11,27 @@
     <div class = "placeholder"> <a href = "https://placeholder.com"> <img src="https://via.placeholder.com/100X50"> </a> </div> 
 
     <div class = "container-1">
-        <h3> Sign In </h3>
-        <p> Email(phone or mobile accounts) </p>
+        <div class = "sign-in">
+        <p> Sign In </p></div>
+        <div class = "email">
+        <p> Email(phone or mobile accounts) </p></div>
         <div class = enter-email-box>
         <label for="Email"></label>
         <input type = "text" id = "email" placeholder = "Enter Email" >
         </div>
-            <p> Password 
-            <a href= "/" >Forgot Password </a> </p>
-            <br>
+            <div class = "have-password"><p> Password 
+             <a href= "/" > Forgot Password </a> </p>
+            <br></div>
                 <div class = password>
                 <label for="Password"></label>
                 <input type = "text" id="password" placeholder="Password"> </div>
                 <br>
-                <div class = "button" >
+                <div class = "button-continue" >
                      <button type = "submit"> Continue </button> </div>
                      <br>
+                     <div class = "need-help" >
                         <a href= "/" > Need Help? </a> </div>
+                        <br></div>
     </div>
     <div class = "create-account" >
         <button type = "submit"> Create Your Amazon Account </button> </div>
