--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type = "text" id="password" placeholder="Password"> </div>
                 <br>
                 <div class = "button-continue" >
-                     <button type = "submit"> Continue </button> </div>
+                     <button class="submit-button" type = "submit"> Continue </button> </div>
                      <br>
                      <div class = "need-help" >
                         <a href= "/" > Need Help? </a> </div>
